--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -21,22 +21,11 @@
 				<p>Your Cities, Your Pix</p>
 			</div>
 		</header>
-			<div class="dropDown">
-				<div id="NYC">NYC</div>
-				<div id="SF">SF</div>
-				<div id="LA">LA</div>
-				<div id="ATX">ATX</div>
-				<div id="SYD">SYD</div>
-
-				<!-- div class="dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-  <div id="myDropdown" class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div> -->
-</div>
-			</div>
+		<div class="container">
+			<form>
+				<select id="city-type">
+				<option>Select a City</option>
+			</select>
 
 		<script src="js/index.js"></script>
 	</body>
